Design most of the basic layout
Progress commit.

Got the basic layout implemented, no styling just yet.

Still need to add the Contact Me section in the footer and then apply basic layout styling before filling content and adding functionality.

Debating refactoring it into javascript only instead of mainly html/css

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./styles.css">
     <title>Dylan Gresham - Portfolio</title>
 </head>
 <body>
+    <header class="landmarkContainer">
+        <div class="aboutMeContainer">
+            <img src="./images/personal-photo.png" class="mainPhoto" alt="Photo of me.">
+            <div class="aboutMe">
+                <h1>Who I Am</h1>
+                <p class="aboutMeText">Hi! I'm Dylan Gresham, an aspiring software developer.</p>
+                <div class="links">
+                    <button class="linkButton" type="button">GitHub</button>
+                    <button class="linkButton" type="button">LinkedIn</button>
+                    <button class="linkButton" type="button">Resume</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="landmarkContainer">
+        <div class="projectCard">
+            <img src="./images/project1.png" class="projectSS" alt="Project 1 Screenshot">
+            <div class="projectHeader">
 
+            </div>
+            <p class="projectDesc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi libero non provident qui voluptatibus? Aliquam asperiores consequuntur delectus distinctio eos expedita, harum hic laborum molestiae nesciunt odio, quia suscipit, ut.
+            </p>
+        </div>
+        <div class="projectCard">
+            <img src="./images/project2" class="projectSS" alt="Project 2 Screenshot">
+            <div class="projectHeader">
+
+            </div>
+            <p class="projectDesc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur debitis distinctio ea eveniet ex excepturi exercitationem fuga ipsum itaque iusto minima nihil repellendus saepe sapiente soluta temporibus vel, voluptates voluptatibus!
+            </p>
+        </div>
+        <div class="projectCard">
+            <img src="./images/project3" class="projectSS" alt="Project 3 Screenshot">
+            <div class="projectHeader">
+
+            </div>
+            <p class="projectDesc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta earum ipsa nulla ratione velit veniam. Harum, impedit nostrum? Accusamus alias asperiores consequatur expedita hic labore nesciunt odio repellat sit ullam.
+            </p>
+        </div>
+        <div class="projectCard">
+            <img src="./images/project4" class="projectSS" alt="Project 4 Screenshot">
+            <div class="projectHeader">
+
+            </div>
+            <p class="projectDesc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consequatur deleniti ducimus et eveniet facilis fugit libero, magnam magni nostrum perferendis, possimus quam quod ratione recusandae tenetur veniam voluptatibus?
+            </p>
+        </div>
+    </main>
+    <footer class="landmarkContainer">
+        <div>
+
+        </div>
+    </footer>
 </body>
 </html>
