--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 <body>
     <header class="landmarkContainer">
         <div class="aboutMeContainer">
-            <img src="./images/personal-photo.png" class="mainPhoto" alt="Photo of me.">
+            <img src="./images/wip.png" class="mainPhoto" alt="Photo of me.">
             <div class="aboutMe">
-                <h1>Who I Am</h1>
+                <h1 class="sectionHeader">Who I Am</h1>
                 <p class="aboutMeText">Hi! I'm Dylan Gresham, an aspiring software developer.</p>
                 <div class="links">
                     <button class="linkButton" type="button">GitHub</button>
@@ -24,6 +24,7 @@
         </div>
     </header>
     <main class="landmarkContainer">
+        <h1 class="sectionHeader">My Projects</h1>
         <div class="projectCard">
             <img src="./images/project1.png" class="projectSS" alt="Project 1 Screenshot">
             <div class="projectHeader">
@@ -34,7 +35,7 @@
             </p>
         </div>
         <div class="projectCard">
-            <img src="./images/project2" class="projectSS" alt="Project 2 Screenshot">
+            <img src="./images/wip.png" class="projectSS" alt="Project 2 Screenshot">
             <div class="projectHeader">
 
             </div>
@@ -43,7 +44,7 @@
             </p>
         </div>
         <div class="projectCard">
-            <img src="./images/project3" class="projectSS" alt="Project 3 Screenshot">
+            <img src="./images/wip.png" class="projectSS" alt="Project 3 Screenshot">
             <div class="projectHeader">
 
             </div>
@@ -52,7 +53,7 @@
             </p>
         </div>
         <div class="projectCard">
-            <img src="./images/project4" class="projectSS" alt="Project 4 Screenshot">
+            <img src="./images/wip.png" class="projectSS" alt="Project 4 Screenshot">
             <div class="projectHeader">
 
             </div>
@@ -63,7 +64,18 @@
     </main>
     <footer class="landmarkContainer">
         <div>
-
+            <h1 class="sectionheader">Contact Me!</h1>
+            <div class="contactDiv">
+                <p>By Email:</p>
+                <p> <a href="mailto: dgresh724@gmail.com?subject=Contact">dgresh724@gmail.com</a> || <a href="mailto: dylangresham@u.boisestate.edu?subject=Contact">dylangresham@u.boisestate.edu</a></p>
+            </div>
+            <div class="contactDiv">
+                <p>Through LinkedIn:</p>
+                <p><a href="https://www.linkedin.com/in/dylan-gresham-3b3862282" target="_blank">My Profile</a> (link opens in a new tab)</p>
+            </div>
+            <div class="contactDiv">
+                <p>Or leave a message <a href="https://www.github.com/Dylan-Gresham/Personal-Portfolio" target="_blank">on my GitHub!</a> (link opens in a new tab)</p>
+            </div>
         </div>
     </footer>
 </body>
