Style desktop page.
Last thing to do for styling is messing with the scrollbar.

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
         <div class="aboutMeContainer">
             <img src="./images/wip.png" class="mainPhoto" alt="Photo of me.">
             <div class="aboutMe">
-                <h1 class="sectionHeader">Who I Am</h1>
-                <p class="aboutMeText">Hi! I'm Dylan Gresham, an aspiring software developer.</p>
+                <h1 class="sectionHeader">Who Am I?</h1>
+                <h3 class="aboutMeText">Hi! I'm Dylan Gresham, an aspiring software developer.</h3>
                 <div class="links">
-                    <button class="linkButton" type="button">GitHub</button>
-                    <button class="linkButton" type="button">LinkedIn</button>
+                    <button class="linkButton" type="button"><a href="https://github.com/Dylan-Gresham" target="_blank">GitHub</a></button>
+                    <button class="linkButton" type="button"><a href="https://www.linkedin.com/in/dylan-gresham-3b3862282" target="_blank">LinkedIn</a></button>
                     <button class="linkButton" type="button">Resume</button>
                 </div>
             </div>
@@ -25,56 +25,41 @@
     </header>
     <main class="landmarkContainer">
         <h1 class="sectionHeader">My Projects</h1>
-        <div class="projectCard">
-            <img src="./images/project1.png" class="projectSS" alt="Project 1 Screenshot">
-            <div class="projectHeader">
-
+        <div class="projectCardsContainer">
+            <div class="projectCard">
+                <img src="./images/project1.png" class="projectSS" alt="Project 1 Screenshot">
+                <h2 class="projectHeader">Weather App</h2>
+                <p class="projectDesc">A simple weather app to show current, hourly, and 2-day forecasts.</p>
             </div>
-            <p class="projectDesc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi libero non provident qui voluptatibus? Aliquam asperiores consequuntur delectus distinctio eos expedita, harum hic laborum molestiae nesciunt odio, quia suscipit, ut.
-            </p>
-        </div>
-        <div class="projectCard">
-            <img src="./images/wip.png" class="projectSS" alt="Project 2 Screenshot">
-            <div class="projectHeader">
-
+            <div class="projectCard">
+                <img src="./images/wip.png" class="projectSS" alt="Project 2 Screenshot">
+                <h2 class="projectHeader">MyLibraryApp</h2>
+                <p class="projectDesc">A library tracking app for all your books and comics. This project is currently a Work In Progress.</p>
             </div>
-            <p class="projectDesc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur debitis distinctio ea eveniet ex excepturi exercitationem fuga ipsum itaque iusto minima nihil repellendus saepe sapiente soluta temporibus vel, voluptates voluptatibus!
-            </p>
-        </div>
-        <div class="projectCard">
-            <img src="./images/wip.png" class="projectSS" alt="Project 3 Screenshot">
-            <div class="projectHeader">
-
+            <div class="projectCard">
+                <img src="./images/wip.png" class="projectSS" alt="Project 3 Screenshot">
+                <h2 class="projectHeader">Clicker</h2>
+                <p class="projectDesc">A user-programmable auto-clicker.</p>
             </div>
-            <p class="projectDesc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta earum ipsa nulla ratione velit veniam. Harum, impedit nostrum? Accusamus alias asperiores consequatur expedita hic labore nesciunt odio repellat sit ullam.
-            </p>
-        </div>
-        <div class="projectCard">
-            <img src="./images/wip.png" class="projectSS" alt="Project 4 Screenshot">
-            <div class="projectHeader">
-
+            <div class="projectCard">
+                <img src="./images/wip.png" class="projectSS" alt="Project 4 Screenshot">
+                <h2 class="projectHeader">Nottah</h2>
+                <p class="projectDesc">Nottah, a note-taking app that's Nottah lot.</p>
             </div>
-            <p class="projectDesc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consequatur deleniti ducimus et eveniet facilis fugit libero, magnam magni nostrum perferendis, possimus quam quod ratione recusandae tenetur veniam voluptatibus?
-            </p>
         </div>
     </main>
     <footer class="landmarkContainer">
-        <div>
-            <h1 class="sectionheader">Contact Me!</h1>
-            <div class="contactDiv">
-                <p>By Email:</p>
-                <p> <a href="mailto: dgresh724@gmail.com?subject=Contact">dgresh724@gmail.com</a> || <a href="mailto: dylangresham@u.boisestate.edu?subject=Contact">dylangresham@u.boisestate.edu</a></p>
+        <h1 class="sectionHeader">Contact Me!</h1>
+        <div class="contactDivsContainer">
+            <div class="contactDiv contactLabels">
+                <p><b>By Email:</b></p>
+                <p><b>Through LinkedIn:</b></p>
+                <p><b>Or leave a message</b></p>
             </div>
-            <div class="contactDiv">
-                <p>Through LinkedIn:</p>
-                <p><a href="https://www.linkedin.com/in/dylan-gresham-3b3862282" target="_blank">My Profile</a> (link opens in a new tab)</p>
-            </div>
-            <div class="contactDiv">
-                <p>Or leave a message <a href="https://www.github.com/Dylan-Gresham/Personal-Portfolio" target="_blank">on my GitHub!</a> (link opens in a new tab)</p>
+            <div class="contactDiv contactLinks">
+                <p><a class="footerLinks" href="mailto: dgresh724@gmail.com?subject=Contact">dgresh724@gmail.com</a> || <a class="footerLinks" href="mailto: dylangresham@u.boisestate.edu?subject=Contact">dylangresham@u.boisestate.edu</a></p>
+                <p><a class="footerLinks" href="https://www.linkedin.com/in/dylan-gresham-3b3862282" target="_blank">My Profile</a> (link opens in a new tab)</p>
+                <p><a class="footerLinks" href="https://www.github.com/Dylan-Gresham/Personal-Portfolio" target="_blank">on my GitHub!</a> (link opens in a new tab)</p>
             </div>
         </div>
     </footer>
