--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                 <p><b>Or leave a message</b></p>
             </div>
             <div class="contactDiv contactLinks">
-                <p><a class="footerLinks" href="mailto: dgresh724@gmail.com?subject=Contact">dgresh724@gmail.com</a> || <a class="footerLinks" href="mailto: dylangresham@u.boisestate.edu?subject=Contact">dylangresham@u.boisestate.edu</a></p>
+                <p><a class="footerLinks" href="mailto: dgresh724@gmail.com?subject=Contact">dgresh724@gmail.com</a></p>
                 <p><a class="footerLinks" href="https://www.linkedin.com/in/dylan-gresham-3b3862282" target="_blank">My Profile</a> (link opens in a new tab)</p>
                 <p><a class="footerLinks" href="https://www.github.com/Dylan-Gresham/Personal-Portfolio" target="_blank">on my GitHub!</a> (link opens in a new tab)</p>
             </div>
